# cloud-builders

./: .2gitignore  .gitignore  CONTRIBUTING.md  README.md  cloudbuild.yaml  go.mod
.github/: issue_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: 8codeql.yml  codeql.yml  docker-publish.yml
aactl/: README.md  cloudbuild.yaml
aactl/examples/: cloudbuild.yaml
apt/: Dockerfile  README.md  cloudbuild.yaml
awscli/: README.md  cloudbuild.yaml
bazel/: Dockerfile  README.md  bazel.sh  cloudbuild.yaml  invocation_id_test.sh
bazel-6/: Dockerfile  README.md  bazel.sh  cloudbuild.yaml
bazel-6/examples/: BUILD  main_checkargs.go
bazel/examples/: BUILD  WORKSPACE
cargo/: README.md  cloudbuild.yaml
cft-dm/: Dockerfile  README.md  cloudbuild.yaml
csharp/dotnet/: Dockerfile  README.md  cloudbuild.yaml
curl/: Dockerfile  README.md  cloudbuild.yaml  deprecation.sh  notice.sh
docker/: BUILD  BUILD.docker  Dockerfile  Dockerfile-1.12.6  Dockerfile-1.13.1  Dockerfile-1.9.1  Dockerfile-17.05  Dockerfile-17.05.0  Dockerfile-17.06.1  Dockerfile-17.12.0  Dockerfile-18.03.1  Dockerfile-18.06.1  Dockerfile-18.09.0  Dockerfile-18.09.6  Dockerfile-19.03.1  Dockerfile-19.03.8  Dockerfile-19.03.9  Dockerfile-20.10.13  Dockerfile-20.10.6  Dockerfile-base  Dockerfile-versioned  README.md  WORKSPACE  cloudbuild.yaml  deprecation.sh  notice.sh
docker-compose/: Dockerfile  README.md  cloudbuild.yaml
dockerizer/: Dockerfile  README.md  cloudbuild.yaml  dockerizer.ash  dockerizer.bash
dotnet/: .gitignore  Dockerfile  README.md  cloudbuild.yaml  deprecation.sh  notice.sh
fsharp/: Dockerfile  README.md  cloudbuild.yaml
gcloud/: Dockerfile  Dockerfile.slim  Dockerfile.ubuntu1804  README.md  cloudbuild.yaml  gcloud-deprecation.sh  notice.sh  requirements.in  requirements.txt  requirements_py2.txt
gcs-fetcher/: .gitignore  BUILD  Dockerfile  Gopkg.toml  README.md  WORKSPACE  cloudbuild.yaml  go.mod  go.sum  update-deps.sh
gcs-fetcher/cmd/: BUILD.bazel  main.go
gcs-fetcher/cmd/gcs-fetcher/: BUILD.bazel  main.go
gcs-fetcher/cmd/gcs-uploader/: BUILD.bazel  main.go
gcs-fetcher/pkg/common/: BUILD.bazel  common.go  common_test.go
gcs-fetcher/pkg/fetcher/: BUILD.bazel  fetcher.go  fetcher_test.go
git/: Dockerfile  README.md  cloudbuild.yaml  notice.sh
gke-deploy/: .gitignore  Dockerfile  README.md  VENDOR-LICENSE  build.sh  cloudbuild.yaml  go.mod  go.sum  main.go  update-deps.sh
gke-deploy/cmd/: root.go
gke-deploy/deployer/: deployer.go  deployer_test.go
gke-deploy/doc/: automated-deployments.md  deploying-with-cloud-build.md  gke-deploy.md  gke-deploy_apply.md  gke-deploy_prepare.md  gke-deploy_run.md  (+1 more)
gke-deploy/doc-gen/: README.md  main.go
glide/: Dockerfile  README.md  cloudbuild.yaml
go/: .dockerignore  .gcloudignore  Dockerfile  Dockerfile.alpine  Dockerfile.debian  Dockerfile.wheezy  README.md  cloudbuild.yaml  go.bash  go.sh  go.wheezy.bash  go_workspace.go  prepare_workspace.inc
golang-project/: Dockerfile  Dockerfile.alpine  Dockerfile.wheezy  README.md  cloudbuild.yaml  golang_project.ash  golang_project.bash  golang_project.go  golang_project.sh  wheezy.bash
gradle/: Dockerfile  README.md  cloudbuild.yaml  deprecation.sh  jdk7.bash  notice.sh
gsutil/: Dockerfile  README.md  cloudbuild.yaml  gsutil-deprecation.sh  notice.sh
gulpjs/: .gitignore  Dockerfile  README.md  cloudbuild.yaml
helm/: Dockerfile  README.md  cloudbuild.yaml  helm.bash
javac/: Dockerfile  Dockerfile.jdk7  README.md  cloudbuild.yaml  deprecation.sh  jdk7.bash  notice.sh
jfrog/: README.md  cloudbuild.yaml
kubectl/: Dockerfile  README.md  cloudbuild.yaml  kubectl.bash  kubectl.sh
kubeless/: Dockerfile  cloudbuild.yaml  kubeless.bash
maven/: Dockerfile
mvn/: Dockerfile  Dockerfile.appengine  README.md  cloudbuild.yaml  deprecation.sh  deps.txt  jdk7.bash  notice.sh  resolve-deps.sh
npm/: Dockerfile  README.md  cloudbuild.yaml  deprecation.sh  notice.sh
retagger/: Dockerfile  README.md  cloudbuild.yaml  retagger.ash  retagger.bash
twine/: Dockerfile  README.md  cloudbuild.yaml  requirements.in  requirements.txt
wget/: Dockerfile  README.md  cloudbuild.yaml  notice.sh
yarn/: Dockerfile  README.md  cloudbuild.yaml  deprecation.sh  notice.sh
yarn-puppeteer/: Dockerfile  README.md  cloudbuild.yaml
zoneinfo/: Dockerfile  cloudbuild.yaml
(+398 files in other folders)
