load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["common.go"],
    importpath = "github.com/GoogleCloudPlatform/cloud-builders/gcs-fetcher/pkg/common",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["common_test.go"],
    embed = [":go_default_library"],
)
